Fix spacing between "custom" radio button and associated color control.

--- a/src/resources/postcss/customizer-views-v2-controls.pcss
+++ b/src/resources/postcss/customizer-views-v2-controls.pcss
@@ -27,6 +27,14 @@
 			padding: 3px 0;
 		}
 
+		li.customize-control[id$="_choice"] {
+			background-color: pink;
+		}
+
+		&[id$="_choice"] + [id^="customize-control-tribe_customizer"][id$="_color"] {
+			margin-top: -20px;
+		}
+
 		.button.wp-color-result {
 			border-color: #141827;
 
